# dbml-builder

./: README.md  pyproject.toml
dbml_builder/: __init__.py  build.py  cli.py  fix.py
